Change TP links to sandbox mode
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/natural-language-processing/tp-text-features-engineering.tex
+++ b/shared/latex/natural-language-processing/tp-text-features-engineering.tex
@@ -1,20 +1,17 @@
-\begin{frame}
-  \frametitle{Traitement de données textuelles}
+\begin{frame}{Instructions --- Spacy}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5}{Analyse de texte - Spacy}
+    \bluelink{https://colab.research.google.com/drive/1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5\#forceEdit=true&sandboxMode=true}{Découverte de l'API d'analyse de texte de Spacy}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Traitement de données textuelles}
+\begin{frame}{Instructions --- TF-IDF \& LSA}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA}{Utilisation de TF-IDF et LSA}
+    \bluelink{https://colab.research.google.com/drive/1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA\#forceEdit=true&sandboxMode=true}{Utilisation de TF-IDF et LSA}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Traitement de données textuelles}
+\begin{frame}{Instructions --- Word embeddings}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3}{Utilisation de WordEmbeddings}
+    \bluelink{https://colab.research.google.com/drive/1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3\#forceEdit=true&sandboxMode=true}{Utilisation de word embeddings}
   \end{center}
 \end{frame}
