--- a/shared/latex/natural-language-processing/tp-text-reco-system.tex
+++ b/shared/latex/natural-language-processing/tp-text-reco-system.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{Travaux Pratiques}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/19q2dtXfCy5R9HHjIi-pMUQQcqYvYKv81}{TP - Système de recommandation - Texte}
+    \bluelink{https://colab.research.google.com/drive/19q2dtXfCy5R9HHjIi-pMUQQcqYvYKv81\#forceEdit=true&sandboxMode=true}{Systèmes de recommandation pour le texte}
   \end{center}
 \end{frame}
