--- a/shared/latex/neural-networks/tp-nn.tex
+++ b/shared/latex/neural-networks/tp-nn.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{Instructions}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_}{Keras TP}
+    \bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_\#forceEdit=true&sandboxMode=true}{Keras TP}
   \end{center}
 \end{frame}
