--- a/shared/latex/neural-networks/tp-rnn-text.tex
+++ b/shared/latex/neural-networks/tp-rnn-text.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9}{RNN - Classification de texte}
+    \bluelink{https://colab.research.google.com/drive/1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9\#forceEdit=true&sandboxMode=true}{Classification de texte avec des réseaux récurrents}
   \end{center}
 \end{frame}
