--- a/shared/latex/neural-networks/tp-transformer.tex
+++ b/shared/latex/neural-networks/tp-transformer.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{~}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1KHpTeKkGwuKHoWdgoXA_0jLmnbr-ZPLJ}{Transformer TP}
+    \bluelink{https://colab.research.google.com/drive/1KHpTeKkGwuKHoWdgoXA_0jLmnbr-ZPLJ\#forceEdit=true&sandboxMode=true}{Décodage avec les réseaux transformeurs}
   \end{center}
 \end{frame}
