--- a/shared/latex/recommander-system/tp-recommander-system.tex
+++ b/shared/latex/recommander-system/tp-recommander-system.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{~}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1srfi4ixmSqpAO3GuMLFJtdUxE_t1lAr7}{filtrage-colaboratif}
+    \bluelink{https://colab.research.google.com/drive/1srfi4ixmSqpAO3GuMLFJtdUxE_t1lAr7\#forceEdit=true&sandboxMode=true}{Filtrage collaboratif}
   \end{center}
 \end{frame}
