--- a/shared/latex/supervised/tp-random-forest.tex
+++ b/shared/latex/supervised/tp-random-forest.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{Random Forest}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1ooL-E238TCsFQURfnKGY9uqjyXqRqySl}{Random Forest - TP}
+    \bluelink{https://colab.research.google.com/drive/1ooL-E238TCsFQURfnKGY9uqjyXqRqySl\#forceEdit=true&sandboxMode=true}{Régression avec Random Forest}
   \end{center}
 \end{frame}
