--- a/shared/latex/supervised/tp-svm-text.tex
+++ b/shared/latex/supervised/tp-svm-text.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{SVM}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1IhgvvknJ5TYiM4gihiYYCK3UF4sW5-F3}{SVM TP}
+    \bluelink{https://colab.research.google.com/drive/1IhgvvknJ5TYiM4gihiYYCK3UF4sW5-F3\#forceEdit=true&sandboxMode=true}{SVM TP}
   \end{center}
 \end{frame}
