--- a/shared/latex/auto-encoders/tp.tex
+++ b/shared/latex/auto-encoders/tp.tex
@@ -1,9 +1,8 @@
-\begin{frame}
-  \frametitle{Travaux Pratiques}
+\begin{frame}{Instructions}
   \begin{center}
     \begin{itemize}
-      \item \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M}{Auto-encodeurs simples avec Keras}
-      \item \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj}{Auto-encodeurs débruiteurs avec Keras}
+      \item \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M\#forceEdit=true&sandboxMode=true}{Auto-encodeurs simples avec Keras}
+      \item \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj\#forceEdit=true&sandboxMode=true}{Auto-encodeurs débruiteurs avec Keras}
     \end{itemize}    
   \end{center}
 \end{frame}
