--- a/shared/latex/machine-learning/tp-data.tex
+++ b/shared/latex/machine-learning/tp-data.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{Travaux Pratiques}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51}{Exploration de données}
+    \bluelink{https://colab.research.google.com/drive/1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51\#forceEdit=true&sandboxMode=true}{Exploration \& préparation de données}
   \end{center}
 \end{frame}
