--- a/shared/latex/neural-networks/tp-cnn.tex
+++ b/shared/latex/neural-networks/tp-cnn.tex
@@ -1,8 +1,8 @@
 \begin{frame}{Instructions}
   \begin{center}
     \begin{itemize}
-      \item \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz}{CNN avec Keras sur les données Landscape}
-      \item \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4}{CNN avec Keras sur les données Emotions}
+      \item \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{CNN avec Keras sur les données Landscape}
+      \item \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4\#forceEdit=true&sandboxMode=true}{CNN avec Keras sur les données Emotions}
     \end{itemize}
   \end{center}
 \end{frame}
