--- a/shared/latex/neural-networks/tp-nn-tf.tex
+++ b/shared/latex/neural-networks/tp-nn-tf.tex
@@ -1,4 +1,3 @@
-\begin{frame}
-  \frametitle{Travaux Pratiques : Tensorflow }
-  \bluelink{https://colab.research.google.com/drive/1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ}{Réseaux de neurones avec une API Tensorflow de Base}
+\begin{frame}{Instructions}
+  \bluelink{https://colab.research.google.com/drive/1qAvohjjhQpb7xLNmVxLwI1UBhC5KfSyQ\#forceEdit=true&sandboxMode=true}{Réseaux de neurones avec une API Tensorflow de Base}
 \end{frame}
