--- a/shared/latex/neural-networks/tp-rnn.tex
+++ b/shared/latex/neural-networks/tp-rnn.tex
@@ -1,11 +1,11 @@
 \begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD}{Keras - RNN - Voltaire Generator}
+    \bluelink{https://colab.research.google.com/drive/1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD\#forceEdit=true&sandboxMode=true}{Keras - RNN - Voltaire Generator}
   \end{center}
 \end{frame}
 
 \begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1v27jFJB-auN45fiYcRDeEw8ZO2FawE13}{Keras - seq2seq - Calculator}
+    \bluelink{https://colab.research.google.com/drive/1v27jFJB-auN45fiYcRDeEw8ZO2FawE13\#forceEdit=true&sandboxMode=true}{Keras - seq2seq - Calculator}
   \end{center}
 \end{frame}
