--- a/shared/latex/supervised/tp-bayes.tex
+++ b/shared/latex/supervised/tp-bayes.tex
@@ -1,7 +1,6 @@
 
-\begin{frame}
-  \frametitle{TP Réseaux Bayésiens}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1EFQCe5fzSDcjmCS2NdATYkY8ooiYU02a}{Réseaux Bayésiens}
+    \bluelink{https://colab.research.google.com/drive/1EFQCe5fzSDcjmCS2NdATYkY8ooiYU02a\#forceEdit=true&sandboxMode=true}{Réseaux Bayésiens}
   \end{center}
 \end{frame}
