--- a/shared/latex/supervised/tp-svm.tex
+++ b/shared/latex/supervised/tp-svm.tex
@@ -1,7 +1,5 @@
-\begin{frame}
-  \frametitle{SVM}
-  \red{TODO}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f}{SVM TP}
+    \bluelink{https://colab.research.google.com/drive/1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f\#forceEdit=true&sandboxMode=true}{SVM TP}
   \end{center}
 \end{frame}
