--- a/shared/latex/tp-help.tex
+++ b/shared/latex/tp-help.tex
@@ -1,12 +1,7 @@
 \begin{frame}{Fonctions utiles}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Fonctions Utiles (cliquez ici)}
+    \bluelink{https://colab.research.google.com/drive/18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk\#forceEdit=true&sandboxMode=true}{Fonctions Utiles (cliquez ici)}
   \end{center}
-  Après avoir ouvert le lien dans Colaboratory :
-  \begin{center}
-    Fichier > Enregistrer une copie dans Drive...
-  \end{center}
-  Sinon vous ne pourrez pas éditer le notebook.
   \newlinebar
   Un peu d'aide, mais ça ne vaudra jamais de regarder la documentation des librairies utilisées :
   \begin{center}
