--- a/shared/latex/unsupervised/tp-clustering.tex
+++ b/shared/latex/unsupervised/tp-clustering.tex
@@ -1,5 +1,5 @@
-\begin{frame}{TP : Clustering}
+\begin{frame}{Instructions --- Réduction de dimensionnalité \& Clustering}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1lhwD8OXXvqy_8wOVE6P12uPuLTA0DABS}{Clustering --- TP}
+    \bluelink{https://colab.research.google.com/drive/1lhwD8OXXvqy_8wOVE6P12uPuLTA0DABS\#forceEdit=true&sandboxMode=true}{Clustering \& projections linéaires et non-linéaires}
   \end{center}
 \end{frame}
