--- a/shared/latex/unsupervised/tp-dim-reduce.tex
+++ b/shared/latex/unsupervised/tp-dim-reduce.tex
@@ -1,5 +1,5 @@
-\begin{frame}{TP : Réduction dimension}
+\begin{frame}{Instructions --- Réduction de dimensionnalité}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6}{PCA --- TP}
+    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6\#forceEdit=true&sandboxMode=true}{Utilisation de PCA}
   \end{center}
 \end{frame}
