--- a/shared/latex/natural-language-processing/ml-nlp.tex
+++ b/shared/latex/natural-language-processing/ml-nlp.tex
@@ -1,18 +1,26 @@
-\begin{frame}
-  \frametitle{Cas d'usage}
-  Classification :
+\begin{frame}{Introduction}
+  Plusieurs noms~:
+  \begin{itemize}[<+->]
+    \item Traitement du texte
+    \item Traitement du langage (TAL)
+    \item Traitement des langues naturelles (TALN)
+    \item Natural Language Processing (NLP)
+  \end{itemize}
+
+  \onslide<+->{Utilisation du machine learning pour traiter des données textuelles.}
+\end{frame}
+
+\begin{frame}{Cas d'usage --- Classification}
   \begin{itemize}
-  \item thème/genre (gutenberg.org : 57k livres)
   \item auteur (gutenberg.org : 57k livres)
-  \item sentiment (Kaggle movie review : 222k commentaires rotten tomatoes)
+  \item polarité/sentiment (Kaggle movie review : 222k commentaires rotten tomatoes)
   \item reconnaissance d'entités nommées (Kaggle Annotated Corpus for NER : 1.3M tags)
+  \item thème/genre (gutenberg.org : 57k livres)
   \item ...
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  Compréhension :
+\begin{frame}{Cas d'usage --- Compréhension}
   \begin{itemize}
   \item Question/réponses (SQUAD : 150k questions)
   \item Traduction (europarl : 450k phrases alignées)
