--- a/shared/latex/natural-language-processing/preprocessing.tex
+++ b/shared/latex/natural-language-processing/preprocessing.tex
@@ -12,77 +12,62 @@
     \item Réseaux sociaux
     \end{itemize}
   \end{itemize}
-  Une source $\Rightarrow$ un ``web scraper''
+  Une source $\Rightarrow$ un «~web scrapper~»
 \end{frame}
 
-\begin{frame}
-  \frametitle{Tokenisation}
-  Séparer une chaine de caractères en token n'est pas trivial : \\
-  \newline
+\begin{frame}{Tokenisation}
+  Séparer une chaîne de caractères en token n'est pas trivial :
+
   \begin{center}
     Le Dr. Pond èleve des poules. L'éleveur les sur-exploite.
   \end{center}
-  $\;$ \\
+
   (en phrases ou en mots)
 \end{frame}
 
-\begin{frame}
-  \frametitle{POS-Tagging}
-  Étiquetage Morpho-Syntaxique
+\begin{frame}{Étiquetage morpho-syntaxique}
   \imgtw[0.8]{pos-tagging}
 \end{frame}
 
-\begin{frame}
-  \frametitle{NER}
-  Reconnaissance d'Entités Nommées
+\begin{frame}{Reconnaissance d'entités nommées}
   \imgtw[0.8]{named-entity-recognition}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Parsing tree}
-  Arbre Syntaxique
+\begin{frame}{Analyse syntaxique}
   \imgtw[0.8]{parse-tree}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Lemmatisation}
+\begin{frame}{Lemmatisation}
   Exprimer les mots sous leur forme canonique : \\
 
-  \begin{minipage}[l]{0.31\linewidth}
-    jouant \\
-    ont été jouées \\
-    étoiles \\
-    claires \\
-    noire \\
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.68\linewidth}
-  $\Rightarrow$ jouer \\
-  $\Rightarrow$ jouer \\
-  $\Rightarrow$ étoile \\
-  $\Rightarrow$ clair \\
-  $\Rightarrow$ noir  \\
-  \end{minipage}\hfill
-  ...
+  \begin{tabular}{ll}
+    \textbf{Mot} & \textbf{Lemme} \\
+    jouant & jouer \\
+    ont été jouées & jouer \\
+    étoiles & étoile \\
+    claires & clair \\
+    noire & noir
+  \end{tabular}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Outlis : WordNet}
+  \frametitle{Outlis --- WordNet}
   \imgth[0.7]{wordnet-1}  
   Projet sur le français : WOLF (Wordnet Libre du Français) 
 \end{frame}
 
 \begin{frame}
-  \frametitle{Outils : DBpedia}
+  \frametitle{Outils --- DBpedia}
   \imgtw[0.9]{dbpedia}
 \end{frame}
 
-\begin{frame}
+\fmg{\begin{frame}
   \frametitle{Utilisation actuelle}
   \imgtw[0.9]{chatbot}
-\end{frame}
+\end{frame}}
 
-\begin{frame}
+\fmg{\begin{frame}
   \frametitle{Maintenabilité}
   \imgtw[0.9]{usine-a-gaz}
-\end{frame}
+\end{frame}}
 
