--- a/shared/latex/natural-language-processing/similarity-text.tex
+++ b/shared/latex/natural-language-processing/similarity-text.tex
@@ -13,11 +13,13 @@
   \item Distance de Hamming
   \item Longest Common Subsequence (LCS)
   \item Distance de Damerau-Levenshtein
-  \item Produit Scalaire sur TF-IDF
+  \item Produit scalaire sur TF-IDF
   \item ...
   \end{itemize}
-  Des myriades de mesures de similarités de textes existent.\\
-  Toutes essayant de corriger les défauts des précédentes.\\
+  Des myriades de mesures de similarités de textes existent.
+
+  Toutes essayant de corriger les défauts des précédentes.
+
   Aucune n'est satisfaisante dans le cas général. 
 \end{frame}
 
