--- a/shared/latex/natural-language-processing/usages-nlp.tex
+++ b/shared/latex/natural-language-processing/usages-nlp.tex
@@ -1,64 +1,43 @@
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Transcription et synthèse de la parole}}
+\begin{frame}{Cas d'usage --- Transcription et synthèse de la parole}
   \imgtw[0.6]{smart-assistants}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Identification du locuteur}}
+\begin{frame}{Cas d'usage --- Identification du locuteur}
   \imgtw[0.6]{id-locuteur}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Chatbot}}
+\begin{frame}{Cas d'usage --- Chatbot}
   \imgtw[0.6]{zo}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Moteur de recherche}}
+\begin{frame}{Cas d'usage --- Moteur de recherche}
   \imgtw[0.6]{deep-moteur-recherche}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Extraction de données}}
+\begin{frame}{Cas d'usage --- Extraction de données}
   \imgtw[0.6]{information-extraction}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Analyse de sentiments}}
+\begin{frame}{Cas d'usage --- Analyse de sentiments}
   \imgtw[0.6]{sentiment-analysis}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Résumé}}
+\begin{frame}{Cas d'usage --- Résumé}
   \imgtw[0.8]{auto-summary}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Cas d'usage}
-  \underline{\textbf{Traduction}}
+\begin{frame}{Cas d'usage --- Traduction}
   \begin{center}
     \imgtw[1.1]{traduction-fr-en-short}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{État de l'art}
+\begin{frame}{État de l'art --- Vers 2015}
   \imgtw[1]{nlp-tech-resume}
-  \begin{center}
-    $\approx$ 2015
-  \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{État de l'art}
+\begin{frame}{État de l'art --- 2019}
   \imgtw[1]{nlp-tech-resume-2019}
 \end{frame}
 
