--- a/shared/latex/unsupervised/dbscan.tex
+++ b/shared/latex/unsupervised/dbscan.tex
@@ -5,6 +5,7 @@
   \begin{itemize}[<+->]
     \item Gère le bruit (points sans clusters)
     \item Fonctionne bien dans la pratique
+    \item Ne nécessite pas de nombre de clusters prédéfini
   \end{itemize}
 \end{frame}
 
