--- a/shared/latex/unsupervised/pca-variantes.tex
+++ b/shared/latex/unsupervised/pca-variantes.tex
@@ -11,9 +11,9 @@
   Quand on a des variables qualitative ET quantitatives pour décrires nos échantillons, on discrétise chaque variable quantitative. On peut ainsi procéder à l'Analyse en Composantes Multiples
 \end{frame}
 
-\begin{frame}
+\fmg{\begin{frame}
   \frametitle{Analyse Factorielle des Correspondances (AFC)}
   Méthode sur un tableau de contingence :
   \imgtw[0.8]{tableau-contingence}
   On procède alors à une double ACP (une sur le profil ligne, l'autre sur le profil colonne) en utilisant une métrique particulière : le $\chi^2$
-\end{frame}
+\end{frame}}
