--- a/shared/latex/unsupervised/unsupervised-metrics.tex
+++ b/shared/latex/unsupervised/unsupervised-metrics.tex
@@ -1,14 +1,32 @@
+\begin{frame}{Métriques de clustering --- Introduction}
+  Deux cas~:
 
-\begin{frame}
-  \frametitle{Métriques en Non-Supervisé}
+  \begin{enumerate}[<+->]
+    \item Si on dispose de données annotées (même insuffisantes pour apprendre) $\rightarrow$ métriques supervisées de classification
+    \item Sinon, on évalue la qualité \emph{intrinsèque} des clusters
+  \end{enumerate}
+
+\end{frame}
+
+\begin{frame}{Métriques de clustering --- Application des métriques supervisées}
+  Un calcul préalable est nécessaire~: le mapping optimal entre les clusters et les labels.
+
+  Plusieurs possibilités~:
+
+  \begin{itemize}[<+->]
+    \item Algorithme hongrois
+    \item Sous-optimal mais bonne première approche~: classe la plus représentée dans chaque cluster
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Métriques de clustering --- Inertie}
   \begin{center}
-    coût = $\sum_i \sum_j \delta_{i,j}\left| x_j - \mu_i \right|$
+    coût = $\sum_i \sum_j \delta_{i,j}\lVert x_j - \mu_i \rVert^2$
   \end{center}
   où $\delta_{i,j}$ vaut 1 si le cluster $\mu_i$ est le plus proche du point $x_j$, 0 sinon
 \end{frame}
 
-\begin{frame}
-  \frametitle{Métrique : Silouhette}
+\begin{frame}{Métriques de clustering --- Silhouette}
   Points $x = \{x_1, \dotsc, x_n\}$ , Clusters $\mu = \{\mu_1, \dotsc, \mu_k\}$. \\
   \[
   \boxed{a(x_i) = \frac{1}{\#\mu_i-1}\sum_j |x_i - x_j|}
@@ -24,8 +42,23 @@
   
 \end{frame}
 
-\begin{frame}
-  \frametitle{Métrique : Silouhette}
+\begin{frame}{Métriques de clustering --- Silhouette}
+  Points $x = \{x_1, \dotsc, x_n\}$ , Clusters $\mu = \{\mu_1, \dotsc, \mu_k\}$. \\
+  \[
+  \boxed{a(x_i) = \frac{1}{\#\mu_i-1}\sum_j |x_i - x_j|}
+  \]
+  \[
+  \boxed{b(x_i) = \min_{i \neq j} \frac{1}{\#\mu_j}\sum_j |x_i - x_j|}
+  \]
+  où : \\
+  $\#\mu_i$ est le nombre d'éléments de x dans le cluster $\mu_i$ \\
+  L'ensembe d'indice j ne représente que ceux des points appartenant au cluster $\mu_j$ \\
+  $a(x_i)$ : distance moyenne aux autres points du cluster contenant $x_i$ \\
+  $b(x_i)$ : distance moyenne aux points du cluster le plus proche
+  
+\end{frame}
+
+\begin{frame}{Métriques de clustering --- Silhouette}
   
   \begin{center}
     \[
@@ -46,8 +79,7 @@
   $s_i \approx -1 \iff$ $x_i$ mal clusterisé
 \end{frame}
 
-\begin{frame}
-  \frametitle{Métrique : etc}
+\begin{frame}{Métriques de clustering --- Et d'autres options existent}
   \begin{itemize}
   \item Calinski-Harabaz index
   \item Davies-Bouldin Index
